test_suite/tests/ui/identifier/not_unit.stderr
error: #[serde(other)] must be on a unit variant
 --> tests/ui/identifier/not_unit.rs:7:5
  |
7 | /     #[serde(other)]
8 | |     Other(u8, u8),
  | |_________________^
